removed favourites link from main page, corrected CSS to properly align deals box in deals/index.html, changed delete_review function in views.py

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -226,11 +226,11 @@ ul>li {
     border: 1px solid #020060;
     width: 49%;
     color: #020060;
-    float: left;
+    float: right;
 }
 
 .card:nth-child(2n-1) {
-    float: right;
+    float: left !important;
 }
 
 .card-header {
